erDiagram
    CATEGORIES {
        INTEGER CategoryID PK
        TEXT CategoryName
    }
    SUPPLIERS {
        INTEGER SupplierID PK
        TEXT SupplierName
        TEXT Address
    }
    PRODUCTS {
        INTEGER ProductID PK
        TEXT Name
        INTEGER SupplierID FK
        INTEGER CategoryID FK
        REAL Price
    }
    CUSTOMERS {
        INTEGER CustomerID PK
        TEXT Name
        TEXT Address
    }
    STORE_EMPLOYEES {
        INTEGER EmployeeID PK
        TEXT Name
        TEXT HireDate
    }
    ORDERS {
        INTEGER OrderID PK
        INTEGER CustomerID FK
        INTEGER EmployeeID FK
        TEXT OrderDate
    }
    ORDERDETAILS {
        INTEGER OrderDetailID PK
        INTEGER OrderID FK
        INTEGER ProductID FK
        INTEGER Quantity
        REAL PriceEach
        REAL TotalPrice
    }

    PRODUCTS }|--|| SUPPLIERS : "SupplierID -> SupplierID"
    PRODUCTS }|--|| CATEGORIES : "CategoryID -> CategoryID"
    ORDERS }|--|| CUSTOMERS : "CustomerID -> CustomerID"
    ORDERS }|--|| STORE_EMPLOYEES : "EmployeeID -> EmployeeID"
    ORDERDETAILS }|--|| ORDERS : "OrderID -> OrderID"
    ORDERDETAILS }|--|| PRODUCTS : "ProductID -> ProductID"
